--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "type": "module",
   "scripts": {
-    "start": "node --loader ts-node/esm server.ts"
+    "start": "tsx server.ts"
   },
   "devDependencies": {
     "@types/node": "^24.0.14",
+    "sequelize-typescript": "^2.1.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
