--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "type": "module",
   "scripts": {
-    "start": "tsx server.ts"
+    "start": "tsx server.ts",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:unit": "jest tests/unit --coverage",
+    "test:integration": "docker-compose up -d db-test && jest tests/integration"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.14",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.0.5",
     "sequelize-typescript": "^2.1.6",
+    "supertest": "^7.1.3",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
